# FastAPI

./: main.py  pyproject.toml  test.db
app/: app.py  db.py  images.py  schemas.py
